--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 </head>
 
 <body>
-    <h1 class="header--main">Discover hidden places in the world around you</h1>
-    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <h1 class="header-1">Discover hidden places in the world around you</h1>
+    <p><a class="link-cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <video autoplay loop>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+    <h2 class="header-2">Your personal travel guide</h2>
+    <h4 class="header-sub">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 </body>
 
 </html>
